# SimCATS-Datasets

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst
notebooks/: Examples_Pytorch_SimcatsDataset.ipynb  dataset_gen[random_variations].ipynb
simcats_datasets/: __init__.py
simcats_datasets/generation/: __init__.py  _create_dataset.py  _create_simulated_dataset.py
simcats_datasets/loading/: __init__.py  _load_dataset.py  load_ground_truth.py  pytorch.py
simcats_datasets/support_functions/: __init__.py  _json_encoders.py  clip_line_to_rectangle.py  convert_lines.py  data_preprocessing.py  get_lead_transition_labels.py  pytorch_format_output.py
